@@ -1,4 +1,4 @@
-<div class="row no-gutters" (clickOutside)="clear()">
+<div class="row no-gutters">
   <div class="row no-gutters w-100 mt-2">
     <input  #addressInput class="form-control form-control-sm font-9" autocomplete="nope" placeholder="Address" [class.has-error]="address?.errors?.address != ''"
     [(ngModel)]="address.address" required [disabled]="disabled" />
@@ -9,7 +9,7 @@
     <input #stateInput name="state" autocomplete="nope" [class.has-error]="address?.errors?.state != ''" class="pl-2 form-control form-control-sm col-lg-3 mt-2 mt-lg-0 offset-lg-1"
       (input)="address.valueChanged()" placeholder="State" [(ngModel)]="address.state"  [disabled]="disabled"/>
     <mat-select #countryInput name="country" id="country-select" placeholder="Country" [class.has-error]="address?.errors?.country != ''" class="pl-2 form-control form-control-sm col-lg-4 mt-2 mt-lg-0 offset-lg-1"
-      tabIndex="4" style="color:#888" (input)="address.valueChanged()" [(ngModel)]="address.country" [disabled]="disabled">
+      style="color:#888" (input)="address.valueChanged()" [(ngModel)]="address.country" [disabled]="disabled">
       <mat-option [value]="''">Country</mat-option>
       <mat-option [value]="country" *ngFor="let country of data?.value">{{country}}</mat-option>
     </mat-select>
@@ -20,27 +20,29 @@
     <p *ngIf="address?.errors?.country != ''" class="offset-9 mb-0 text-danger">{{address?.errors?.country}}</p>
   </div>
   <hr class="w-100" />
-  <input name="address" autocomplete="off" class="form-control form-control-sm" placeholder="Search..."
-    (keydown.enter)="mapController.onAddressSelected(); mapController.displayed = false" 
-    (keydown)="mapController.selectAddress($event)" (focus)="mapController.displayed = true" 
-    (input)="address.valueChanged(); mapController.valueChanged(searchAddress)"
-    [disabled]="disabled" [(ngModel)]="searchAddress"/>
-  <div class="position-relative w-100">
-    <ul class="list-group suggestions" *ngIf="mapController?.displayed">
-      <li [class.hover]="mapController.hovered == i" *ngFor="let suggestion of mapController?.suggestions; let i = index;"
-        (click)="$event.stopPropagation();
-        mapController.hovered = i;
-        mapController.onAddressSelected();
-        mapController.displayed = false">
-        <span class="ws-main fas fa-map-marker-alt pr-2"></span>{{suggestion}}</li>
-        <li style="pointer-events: none;" *ngIf="!mapController?.suggestions?.length && mapController?.loading.isRunning()">
-          <ws-spinner class="text-center d-block w-100 py-4"></ws-spinner>
-        </li>
-        <li
-          *ngIf="!mapController?.loading.isRunning() && !mapController?.suggestions?.length && mapController?.displayed">
-          <span class="pt-5 pb-5">No result and try other location!</span>
-        </li>
-    </ul>
+  <div class="w-100" (clickOutside)="clear()">
+    <input name="address" autocomplete="off" class="form-control form-control-sm" placeholder="Search..."
+      (keydown.enter)="mapController.onAddressSelected(); mapController.displayed = false" 
+      (keydown)="mapController.selectAddress($event)" (focus)="mapController.displayed = true" 
+      (input)="address.valueChanged(); mapController.valueChanged(searchAddress)"
+      [disabled]="disabled" [(ngModel)]="searchAddress"/>
+    <div class="position-relative w-100">
+      <ul class="list-group suggestions" *ngIf="mapController?.displayed">
+        <li [class.hover]="mapController.hovered == i" *ngFor="let suggestion of mapController?.suggestions; let i = index;"
+          (click)="$event.stopPropagation();
+          mapController.hovered = i;
+          mapController.onAddressSelected();
+          mapController.displayed = false">
+          <span class="ws-main fas fa-map-marker-alt pr-2"></span>{{suggestion}}</li>
+          <li style="pointer-events: none;" *ngIf="!mapController?.suggestions?.length && mapController?.loading.isRunning()">
+            <ws-spinner class="text-center d-block w-100 py-4"></ws-spinner>
+          </li>
+          <li
+            *ngIf="!mapController?.loading.isRunning() && !mapController?.suggestions?.length && mapController?.displayed">
+            <span class="pt-5 pb-5">No result and try other location!</span>
+          </li>
+      </ul>
+    </div>
   </div>
   <p class="text-muted mb-0 mt-2">*Click to set the accurate location for your customer</p>
   <div class="border mb-3 w-100 position-relative">
