@@ -19,9 +19,11 @@ import { FormsModule, ReactiveFormsModule } from '@angular/forms';
 import { ElementModule } from '../element/element.module';
 import { DragDropModule } from '@angular/cdk/drag-drop';
 import { MDBBootstrapModule } from 'angular-bootstrap-md';
+import { BusinessLocationComponent } from '@elements/business-location/business-location.component';
 
 @NgModule({
   declarations: [
+    BusinessLocationComponent
   ],
   imports: [
     CommonModule,
@@ -64,7 +66,8 @@ import { MDBBootstrapModule } from 'angular-bootstrap-md';
     LazyLoadImageModule,
     MDBBootstrapModule,
     NgxDropzoneModule,
-    SortablejsModule
+    SortablejsModule,
+    BusinessLocationComponent
   ]
 })
 export class SharedModule { }
