@@ -235,7 +235,8 @@ ws-loading{
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    padding: .25rem 0;
+    padding: 0;
+    margin: 1rem 0 1.5rem 0;
     font-size: 14px;
     flex-grow: 1;
     flex-basis: 0;
